// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLink renders 1`] = `
<StyledLink
  priority="warning"
  size="normal"
  target="_self"
  to="/settings/accounts/notifications"
  withoutMarginBottom={false}
>
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <InlineSvg
    size="1em"
    src="icon-chevron-right"
  />
</StyledLink>
`;

exports[`AlertLink renders with icon 1`] = `
<StyledLink
  priority="warning"
  size="normal"
  target="_self"
  to="/settings/accounts/notifications"
  withoutMarginBottom={false}
>
  <StyledInlineSvg
    size="1.5em"
    spacingSize="normal"
    src="icon-mail"
  />
  <AlertLinkText>
    This is an external link button
  </AlertLinkText>
  <InlineSvg
    size="1em"
    src="icon-chevron-right"
  />
</StyledLink>
`;
